<resources>
    <string name="app_name">My Cook Book</string>
    <string name="title_activity_save_recipe">Save Recipe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello">Hello</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--login page-->
    <string name="loginGoogle">Login with Google</string>


    <!-- menu section-->
    <string name="showList">My Recipes</string>
    <string name="logOff">Log Off</string>
    <string name="login">Log In</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>
    <string name="addRecipe">Create Recipe</string>


    <!--Save action section-->
    <string name="saveHeader">Title</string>
    <string name="saveUri">URL</string>
    <string name="saveDescription">Description</string>
    <string name="saveAccept">Save</string>
    <string name="saveUpdate">Update</string>
    <string name="saveDiscard">Cancel</string>
    <string name="saveCourses">Course</string>
    <string name="saveDiets">Diet</string>
    <string name="saveTags">Tag</string>

    <string-array name="saveCourse">
        <item>Course...</item>
        <item>Soup</item>
        <item>Appetizer</item>
        <item>Main Course</item>
        <item>Extras</item>
        <item>Salad</item>
        <item>Dessert</item>
        <item>Bakery</item>
    </string-array>

    <string-array name="saveDiet">
        <item>Diet...</item>
        <item>Carnivore</item>
        <item>Dairy</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>

    <!--Display Action section-->
    <string name="displayBack">Back</string>
    <string name="displayHead">Serch in header</string>
    <string name="displayTagsLabel"> tags</string>
    <string name="delete_alert_title">Delete recipe</string>
    <string name="delete_alert_message">Are you sure you want to delete this recipe?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>


    <!--Build Recipe Manually-->
    <string name="saveBuild">Build\nRecipe</string>
    <string name="manualIngredientsHeader">INGREDIENTS</string>
    <string name="manualIngredientHint">ingredient....</string>
    <string name="manualQuantityHint">quantity....</string>
    <string name="manualPreparationsHeader">PREPARATION</string>
    <string name="manualPreparationHint">next stage....</string>
    <string name="buildButtonBack">BACK</string>

    <string-array name="manualMeasurment">
        <item></item>
        <item>gr</item>
        <item>Kg</item>
        <item>cc</item>
        <item>Liter</item>
        <item>Teaspoon</item>
        <item>Spoon</item>
        <item>Coup</item>
        <item>Pcs.</item>
    </string-array>

    <!--    tools file-->
    <string name="tools_file_name">user_tools</string>
    <string name="user_name">name</string>
    <string name="user_lang">lang</string>
    <string name="is_refresh">false</string>

    <!--    main explaination-->
    <string name="first_sen">1. Open a recipe on chrome or on youtube or photo</string>
    <string name="sec_sen">2. Select share option</string>
    <string name="thr_sen">3. Select this application - my cook book</string>
    <string name="four_sen">4. Save the recipe</string>
    <string name="good_luck">Good luck! Go to cook :)</string>
    <string name="welcom">Welcom to - My Cook Book!!</string>
    <string name="understand">got it</string>

    <string name="not_fav_recipe">You have not used any recipe yet...</string>

    <!--    google-ad-keys-->
    <string name="display_data_key">ca-app-pub-2739009739311215/2149837537</string>
    <string name="main_key">ca-app-pub-2739009739311215/2041994506</string>
    <string name="save_key">ca-app-pub-2739009739311215/5882033138</string>
    <string name="debug_key">ca-app-pub-3940256099942544/6300978111</string>
    <string name="create_manual_recipe">ca-app-pub-2739009739311215/7166021181</string>
    <string name="view_manual_recipe">ca-app-pub-2739009739311215/7988341789</string>
    <string name="view_image_recipe">ca-app-pub-2739009739311215/4049096779</string>
    <string name="test_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--    toast messages-->
    <string name="created_recipe">Recipe saved</string>
    <string name="error_created_recipe">Error while save the recipe, please try again</string>
    <string name="delete_recipe">recipe deleted</string>
    <string name="error_view_image">can not show this recipe image</string>
</resources>
