<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title=""
    android:icon="@drawable/more"
    app:showAsAction="always"

    >
<menu >
    <item
        android:title="@string/language"
        android:icon="@drawable/language_icon">
        <menu>
            <item android:title="@string/english"
                android:id="@+id/eng"
                />
            <item
                android:title="@string/hebrew"
                android:id="@+id/heb"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_show"
        android:title="@string/showList"
        android:icon="@drawable/list_recipe"
        />
    <item
        android:id="@+id/menu_logoff"
        android:title="@string/logOff"
        android:icon="@drawable/logoff_icon"
        app:showAsAction="ifRoom"
        />
</menu>
</item>
</menu>
