<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExplainationDialog"
    android:id="@+id/explain_dialog">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcom"
            android:textSize="25dp" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/recipes"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:text="@string/first_sen"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:text="@string/sec_sen"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:text="@string/thr_sen"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="250dp"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:text="@string/four_sen"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="250dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:text="@string/good_luck"
        android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>